fix alignment css login

--- a/Static/Style/main.css
+++ b/Static/Style/main.css
@@ -21,12 +21,12 @@ body{
 /* ------------------  Register Page ------------------ */
 
 #form-container{
+    position: fixed;
     width: 400px;
     box-shadow:var(--shaddow);
     background-color: #fff;
     padding: 30px;
     border-radius: 5px;
-    position: fixed;
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
@@ -88,7 +88,7 @@ body{
     #welcome-message h1{
         font-size: 24px;
     }
-    
+
 }
 
 
@@ -227,23 +227,37 @@ body{
 }
 
 /*login styling*/
+.card {
+      position: fixed;
+      padding: 30px;
+      top: 300px;
+      left: 725px;
+      width: 400px;
+      text-align: center;
+      transform: translate(-50%, -50%);
 
-.middle{
-    text-align: center;
+
+
+
 }
-.flipper{
-    position: relative;
-    margin-top: 342px;
-    top: 200%;
+.other-back{
+    background-color: rgba(0,0,0,0.5);
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+.other-front{
+    background-color: rgba(0,0,0,0.5);
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
 
-
-    transform-style: preserve-3d;
-    transition: 0.6s;
-
-    -webkit-transform-style: preserve-3d;
 }
